# backend/src/dto/user/CreateUserRequest.ts
@@ -1,0 +1,5 @@
+export interface CreateUserRequest {
+    name: string;
+    email: string;
+    password: string;
+}
