# backend/src/infrastructure/user/PrismaUserRepository.ts
@@ -1,12 +1,15 @@
-import { UserRepository } from '../../domain/user/UserRepository';
-import { User } from '../../domain/user/User';
-import { PrismaClient } from '@prisma/client';
+import {PrismaClient} from '@prisma/client';
+import {UserManagementRepository} from "../../domain/user/UserManagementRepository";
+import {UpdateUserRequest} from "../../dto/user/UpdateUserRequest";
+import {UserResponse} from "../../dto/user/UserResponse";
+import {CreateUserRequest} from "../../dto/user/CreateUserRequest";
+import {User} from "../../domain/user/User";
 
 const prisma = new PrismaClient();
 
-export class PrismaUserRepository implements UserRepository {
-    async save(user: User): Promise<void> {
-        await prisma.user.create({ data: user });
+export class PrismaUserRepository implements UserManagementRepository {
+    async save(user: CreateUserRequest): Promise<User> {
+        return prisma.user.create({data: user});
     }
 
     async findAll(): Promise<User[]> {
@@ -14,7 +17,7 @@ export class PrismaUserRepository implements UserRepository {
     }
 
     async findById(id: string): Promise<User | undefined> {
-        const user = await prisma.user.findUnique({ where: { id } });
+        const user = await prisma.user.findUnique({where: { id } });
         return user ?? undefined;
     }
 
@@ -22,10 +25,10 @@ export class PrismaUserRepository implements UserRepository {
         await prisma.user.delete({ where: { id } });
     }
 
-    async update(user: User): Promise<void> {
-        await prisma.user.update({
-            where: { id: user.id },
-            data: { name: user.name },
+    async update(data: UpdateUserRequest): Promise<User> {
+        return prisma.user.update({
+            where: {id: data.id},
+            data: {name: data.name},
         });
     }
 }
